# RLFiniteGames

./: .gitignore  pyproject.toml
rlfinitegames/algorithms/: double_state_action_learning.py  first_visit.py  helperclasses.py  one_step_dp.py  policy_iteration.py
rlfinitegames/dash_app/: main_dash.py  test.py
rlfinitegames/dash_app/assets/: styles.css
rlfinitegames/dash_app/locale/: general.de.yml  general.en.yml
rlfinitegames/dash_app/source/: backend_gridworld.py
rlfinitegames/dash_app/source/components/: ids.py  layout.py
rlfinitegames/dash_app/source/components/gridworld/: grid_world_game_trained_agent.py  grid_world_play_trained_agent.py  gridworld_action_dropdown.py  gridworld_game.py  gridworld_start_training.py
rlfinitegames/environments/: constructed_max_bias.py  grid_world.py  ice_vendor.py
rlfinitegames/environments/utils/: demandstructure.py  helpfunctions.py
rlfinitegames/exercises/: solution06.md
rlfinitegames/exercises/sheet06/: Task01.md  Task02.md  Task03.md
rlfinitegames/experiments/: run_off_policy_td_control.py  run_sarsa_on_policy_control.py  run_sarsa_policy_eval.py  run_sarsa_policy_iteration.py
rlfinitegames/experiments/run_double_qlearning/: run_doubel_q.py
rlfinitegames/experiments/run_monte_carlo.py/: montecarlo_grid_world.py
rlfinitegames/logging_module/: setup_logger.py
rlfinitegames/play_games/: run_grid_world.py  run_ice_vendor.py
rlfinitegames/policies/: discrete_agents.py
