[tool.poetry]
name = "rlfinitegames"
version = "0.1.0"
description = ""
authors = ["aferdina <aferdina@mail.uni-mannheim.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gym = "^0.26.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
